# clinical-ontology-normalizer

./: .claudeignore  .cursorindexingignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CAPABILITY_INVENTORY.md  CLAUDE.md  CODEBASE_MAP.md  DETAILED_ROADMAP.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  KARPATHY_CODE_AUDIT.md  Makefile  ONTOLOGY_RELATIONSHIPS_PLAN.md  PLAN-data-pipeline.md  README.md  REFACTORING_TODO.md  ROADMAP.md  codebase_kg.json  docker-compose.prod.yml  docker-compose.yml  sample_mimic_notes.csv  start.sh
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_PLAN.md  README.md  generated_clinical_notes.json  init.sql  pyproject.toml  pytest.ini  requirements.txt  run_api_key_tests.py  run_async_query_tests.py  run_audit_tests.py  run_auth_middleware_tests.py  run_batch_api_tests.py  run_config_tests.py  run_data_export_tests.py  run_grafana_tests.py  run_load_tests.py  run_logging_tests.py  run_prometheus_tests.py  run_schema_migration_tests.py  run_versioning_tests.py  run_webhook_tests.py
backend/alembic/versions/: 014_add_concept_relationships.py  015_create_audit_tables.py  016_create_calculator_tables.py  016_create_rbac_tables.py  017_create_omop_cdm_tables.py  018_create_omop_vocabulary_tables.py  019_add_omop_foreign_keys.py  020_add_provenance_tables.py  021_add_policy_tables.py  022_add_alert_rules_table.py  023_add_vocabulary_versioning.py  024_create_smart_app_tables.py  025_create_pipeline_tables.py  026_add_kg_edge_temporal_fields.py  027_create_policy_kg_tables.py  028_refine_kg_edge_temporal_fields.py  029_add_soft_delete_and_composite_indexes.py  030_add_kg_composite_indexes.py  031_add_kg_node_provenance.py  032_add_kg_edge_provenance.py  033_add_mention_event_date.py  034_add_entity_relationship_edge_types.py  035_add_provenance_temporal_enum_values.py  036_add_narrative_node_edge_types.py  037_audit_immutability_hash_chain.py  038_add_pipeline_version_to_clinical_facts.py  039_add_data_lineage.py  040_shared_concept_nodes.py  041_migrate_concept_nodes.py  042_phi_encryption.py  043_concept_ancestor_covering_indexes.py  044_concept_concept_edge_types.py  045_research_experiments.py  046_unify_temporality_enum.py  047_add_document_owner_id.py  048_add_document_search_vector.py  049_add_temporal_pipeline_fields.py  050_add_experiencer_to_kg_edges.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  access_review.py  adaptive_trial.py  adverse_event_reconciliation.py  adverse_events.py  agent.py  agent_chat.py  ai_audit.py  ai_coding.py  alert_rules.py  ancillary_study.py  api_gateway.py  api_versioning.py  assistant.py  audit.py  auth.py  auth_sessions.py  autoscaling.py  backup_status.py  batch.py  benchmarks.py  benefit_risk_assessment.py  biobank_management.py  bioequivalence.py  biomarker_analysis.py  biostatistics_ops.py  budget_management.py  bulk_screening.py  business_continuity.py  calculators.py  capa_management.py  cdisc.py  cdisc_standards.py  cds_hooks.py  central_irb.py  central_laboratory.py  central_monitoring.py  change_control.py  cicd_pipeline.py  clinical_agent.py  (+281 more)
backend/app/cli/: __init__.py  kg_admin.py
backend/app/connectors/: __init__.py  base.py  ccda_connector.py  concept_mappings.py  csv_connector.py  database_connector.py  fhir_connector.py  hl7v2_connector.py  meditech_openehr_contract.py  openehr_connector.py
backend/app/core/: __init__.py  api_budget.py  api_maturity.py  audit.py  auth.py  config.py  database.py  degradation_context.py  dependency_classifier.py  logging_config.py  permissions.py  phi_encryption.py  pipeline_version.py  privacy.py  (+11 more)
backend/docs/: BENCHMARK_RESULTS.md  DEPLOYMENT.md  GAP_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md
backend/fixtures/: cdisc_terminology.json  clinical_guidelines.json  cpt_codes_full.json  omop_vocabulary.json
backend/scripts/: analyze_c4_anomaly.py  analyze_results.py  annotate_assertions.py  build_concept_ancestor.py  build_full_patient_graph.py  build_patient_graph.py  capture_api_contract.py  check_migrations.py  compute_task_c_gold_standards.py  compute_task_d_gold_standards.py  create_vector_index.py  dev_setup_check.py  endpoint_inventory.py  evaluate_assertion_classifier.py  export_physician_adjudication.py  fetch_cpt_codes.py  fetch_rxnorm_codes.py  fetch_snomed_codes.py  generate_benchmark.py  generate_context_index.py  generate_guidelines.py  generate_guidelines_batch10.py  generate_guidelines_batch11.py  generate_guidelines_batch12.py  generate_guidelines_batch2.py  generate_guidelines_batch3.py  generate_guidelines_batch4.py  generate_guidelines_batch5.py  generate_guidelines_batch6.py  generate_guidelines_batch7.py  generate_guidelines_batch8.py  generate_guidelines_batch9.py  generate_guidelines_bulk.py  generate_longitudinal_notes.py  load_cdisc_terminology.py  load_omop_relationships.py  load_omop_to_neo4j.py  load_snomed_lateral_rels.py  load_umls_to_neo4j.py  metriport_sandbox_patients.json  (+45 more)
backend/tests/: conftest.py  test_access_review.py  test_active_learning.py  test_adaptive_trial.py  test_adverse_event_reconciliation.py  test_adverse_events.py  test_ai_audit.py  test_alert_rules_api.py  test_ancillary_study.py  test_answer_template_service.py  test_api_contract.py  test_api_documents.py  test_api_gateway.py  test_api_health.py  test_api_jobs.py  test_api_maturity_labeling.py  test_api_validation.py  test_api_versioning.py  test_assertion_classifier.py  test_assertion_detection.py  test_assertion_validation.py  test_async_query_executor.py  test_audit.py  test_audit_chain.py  test_auth.py  test_autoscaling.py  test_backup_verification.py  test_batch_api.py  test_benefit_risk_assessment.py  test_biobank_management.py  test_bioequivalence.py  test_biomarker_analysis.py  test_biostatistics_ops.py  test_budget_management.py  test_build_graph_request.py  test_business_continuity.py  test_calculator_canonicalization.py  test_calculators.py  test_calibration_service.py  test_capa_management.py  (+379 more)
(+1665 files in other folders)
