[project]
name = "clinical-ontology-normalizer"
version = "0.1.0"
description = "Clinical data normalization to OMOP with knowledge graph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "alembic>=1.13.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "httpx>=0.26.0",
    "greenlet>=3.3.0",
    "pyahocorasick>=2.3.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "neo4j>=5.15.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "httpx>=0.26.0",
]
ml = [
    "spacy>=3.7.0",
    "scispacy>=0.5.4",
    "transformers>=4.36.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "alembic",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (needed for FastAPI Depends)
    "B904",  # exception chaining not yet enforced across the codebase
    "B007",  # allow unused loop variables in mock data builders
    "B905",  # allow zip without strict in legacy paths
    "B039",  # allow mutable defaults in legacy ContextVars
    "B023",  # allow loop variable references in nested functions
    "B033",  # allow duplicate items in large stop-word sets
    "B011",  # allow assert False in legacy scripts/tests
    "B017",  # allow generic Exception in legacy tests
    "C401",  # allow generator set patterns in legacy code
    "C414",  # allow list() in sorted in legacy code
    "C416",  # allow dict comprehension in legacy code
    "C420",  # allow dict comprehension for keys in legacy code
    "E402",  # allow mid-file imports in legacy modules
    "E712",  # allow explicit boolean comparisons in legacy code
    "E731",  # allow lambda assignments in legacy connectors
    "E741",  # allow ambiguous variable names in legacy code
    "F401",  # allow unused imports in legacy modules
    "F541",  # allow f-strings without placeholders in SSE strings
    "F841",  # allow unused local variables in exploratory code paths
    "F811",  # allow shadowing of names in legacy models
    "F601",  # allow duplicate keys in legacy normalization maps
    "F402",  # allow import shadowing in legacy code
    "I001",  # import sorting handled separately
    "UP032",  # allow .format usage in legacy strings
    "UP006",  # allow legacy typing.List usage
    "UP007",  # allow Union annotations for compatibility
    "UP015",  # allow explicit file mode arguments
    "UP017",  # allow timezone.utc usage for Py3.9 compatibility
    "UP037",  # allow quoted annotations in legacy code
    "UP035",  # allow typing.List/Dict in legacy modules
    "UP045",  # allow Optional[...] usage
    "UP041",  # allow asyncio.TimeoutError usage
    "UP036",  # allow version guards in legacy tests
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
